 
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-idle-game"
version = "0.1.0"
description = "ECS-light/Celery based RPG idle game"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
package-mode = false
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",  # For PostgreSQL support
    "pytest>=7.0.0",
    "pytest-asyncio",
    "asyncpg",
    "dramatiq",
    "apscheduler"=3.11.0
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.2.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.200",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"